--- a/my_first_notebook.ipynb
+++ b/my_first_notebook.ipynb
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "060afd26",
+   "id": "9c0f6e1f",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "69326c4e",
+   "id": "d7e79271",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "8ba137ad",
+   "id": "9faff3d4",
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "40732003",
+   "id": "d96b55f0",
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f88c7d92",
+   "id": "aa206816",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "b538ae6c",
+   "id": "9de1d0e0",
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "75926835",
+   "id": "bf872eac",
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "85ecaae3",
+   "id": "a8460fff",
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "6886873f",
+   "id": "d03bb1f6",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "c7afa2d4",
+   "id": "f109dd11",
    "metadata": {},
    "outputs": [
     {
@@ -500,8 +500,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "f8ea960b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#A term or phrase typed into a search box?\n",
+    "#string\n",
+    "#If a user is logged in?\n",
+    "#bool\n",
+    "#A discount amount to apply to a user's shopping cart?\n",
+    "#float\n",
+    "#Whether or not a coupon code is valid?\n",
+    "#bool\n",
+    "#An email address typed into a registration form?\n",
+    "#string\n",
+    "#The price of a product?\n",
+    "#float\n",
+    "#A Matrix?\n",
+    "#list\n",
+    "#The email addresses collected from a registration form?\n",
+    "#string\n",
+    "#Information about applicants to Codeup's data science program?\n",
+    "#dict"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "98702745",
+   "id": "331ca164",
    "metadata": {},
    "outputs": [],
    "source": []
