--- a/jupyter_functions_notes.ipynb
+++ b/jupyter_functions_notes.ipynb
@@ -1008,7 +1008,25 @@
    "id": "da898145",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#ingredients for algorithms. An algorithm is a formalized sequence of scteps to solve a problem.\n",
+    "    # Cookie recipe is an algorith (following each step to the letter)\n",
+    "    # Calculating the average of a list of numbers\n",
+    "    # Turbotax runs algorithms/sequences of steps to determin your tax credit/liability\n",
+    "\n",
+    "#the \"big 3\" of programming\n",
+    "\n",
+    "    # Sequence\n",
+    "    # Selection\n",
+    "    # Iteration\n",
+    "    \n",
+    "    \n",
+    "####Sequence\n",
+    "    # order of operations\n",
+    "    # PEMDAS\n",
+    "\n",
+    "#how to solve looping problems?"
+   ]
   }
  ],
  "metadata": {
