updated import ex ipynb

--- a/import_exercises.ipynb
+++ b/import_exercises.ipynb
@@ -254,8 +254,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3973c620",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from function_exercises import get_letter_grade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9980522d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_letter_grade(90)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11af7ed0",
    "metadata": {},
    "outputs": [],
    "source": []
